<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="applicationName">RouteMap</string>
    <string name="noMaps">No maps found</string>
    <string name="noTracks">No tracks found</string>
    <string name="missingGpsiesUsername">Please set your gpsies.com username</string>
    <string name="cannotReadFromCache">Cannot read from cache directory</string>
    <string name="loadMapFile">Please load a map file</string>
    <string name="selecteMapNotExists">Selected map does not exist</string>
    <string name="gpsRequired">GPS required, please enable</string>
    <string name="enableGps">Enable GPS</string>
    <string name="cancel">Cancel</string>
    <string name="loadingX">Loading:</string>
    <string name="remove">Remove</string>
    <string name="download">Download</string>
    <string name="cannotWriteToCache">Cache is not writable</string>
    <string name="failedToOpenMap">Failed to open map file:</string>
    <string name="failedToOpenTrack">Failed to open track file:</string>
    <string name="waitingForGps">Waiting for GPS signal&#8230;</string>
    <string name="mph">mph</string>
    <string name="kmh">km/h</string>
    <string name="brightnessSystem">Use system setting</string>
    <string name="brightnessAutomatic">Automatic</string>
    <string name="brightnessMaximum">Maximum</string>
    <string name="brightnessMedium">Medium</string>
    <string name="brightnessMinimum">Low</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="downloading">Downloading</string>
    <string name="loading">Loading</string>
    <string name="km">km</string>
    <string name="mi">mi</string>
    <string name="updateList">Update list</string>
    <string name="update">Update</string>
    <string name="settingStandby">Deactivate standby</string>
    <string name="settingStandbyLong">Deactivate standby while RouteMap is active</string>
    <string name="settingRotate">Rotate map</string>
    <string name="settingRotateLong">Rotate map according to direction of travel</string>
    <string name="settingBrightness">Brightness</string>
    <string name="settingBrightnessLong">Screen brightness while the map is visible</string>
    <string name="settingDim">Dim screen</string>
    <string name="settingDimLong">Dim screen to save power, tap again to reset brightness</string>
    <string name="settingDistance">Distance unit</string>
    <string name="settingDistanceLong">The unit type to calculate distances in</string>
    <string name="settingGpsies">Gpsies username</string>
    <string name="settingGpsiesLong">Your username on gpsies.com</string>
    <string name="dimNever">Never</string>
    <string name="dim15">After 15 seconds</string>
    <string name="dim30">After 30 seconds</string>
    <string name="dim60">After 60 seconds</string>
    <string name="downloadFailed">Download failed, please check network settings</string>
    <string name="updateFailed">Update failed, please check network settings</string>
    <string name="manageMaps">Manage maps</string>
    <string name="preferences">Preferences</string>
    <string name="loadTrackFromGpsies">Load track from gpsies.com</string>
    <string name="mapStatus">Status</string>
    <string name="loadMapRequired">Please load a map to continue</string>
    <string name="loadMap">Load map</string>
    <string name="myTracks">My tracks</string>
    <string name="notepad">Notepad</string>
    <string name="step1">Step 1:</string>
    <string name="step2">Step 2:</string>
    <string name="step3">Step 3:</string>
    <string name="stepLoadMap">Download a map</string>
    <string name="stepSetUsername">Set gpsies.com username</string>
    <string name="stepActivateGPS">Activate GPS</string>
    <string name="showMap">Show map</string>
</resources>