<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical" >
    <ImageView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/applicationName"
        android:paddingBottom="40dip"
        android:paddingTop="30dip"
        android:scrollbars="none"
        android:src="@drawable/application" />
    <TextView
        android:id="@+id/step1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableLeft="@drawable/map_add"
        android:text="@string/stepLoadMap" />
    <TextView
        android:id="@+id/step2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableLeft="@drawable/map_add"
        android:text="@string/stepSetUsername" >
    </TextView>
    <TextView
        android:id="@+id/step3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableLeft="@drawable/map_add"
        android:text="@string/stepActivateGPS" />
    <Button
        android:id="@+id/buttonShowMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:enabled="false"
        android:text="@string/showMap" />
</LinearLayout>